# lambda-cli

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  homebrew.yml  release-please.yml
npm/: package.json.tmpl
npm/lambda-mcp/: README.md  package-lock.json  package.json  tsconfig.json
npm/lambda-mcp/src/: index.ts
scripts/: release.sh  update-homebrew.sh
src/: api.rs  lib.rs  main.rs  notify.rs
