[package]
name = "lambda_cli"
version = "0.2.2"
edition = "2021"
description = "A command-line tool for Lambda Labs cloud GPU API"
license = "MIT"
repository = "https://github.com/Strand-AI/lambda-cli"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
prettytable = "0.10"
colored = "2.1"
chrono = "0.4"
crossterm = "0.28"
anyhow = "1.0"
thiserror = "2.0"
