[package]
name = "lambda_cli"
version = "0.3.2"
edition = "2021"
description = "CLI and MCP server for Lambda Labs cloud GPU instances"
license = "MIT"
repository = "https://github.com/Strand-AI/lambda-cli"

[[bin]]
name = "lambda"
path = "src/main.rs"

[[bin]]
name = "lambda-mcp"
path = "src/bin/lambda-mcp.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
prettytable = "0.10"
colored = "2.1"
chrono = "0.4"
crossterm = "0.28"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.8", features = ["server", "macros", "transport-io"] }
schemars = "1"
